--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "objrs"
 version = "0.1.0"
 edition = "2021"
+description = "render obj files"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -18,3 +19,6 @@ tobj = "4.0.2"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
+
+[package.metadata.bundle]
+identifier = "com.afienko.exampleapplication"
